# BDM

./: Lab01_SQL.ipynb  Lab01_SQL_no_solution.ipynb  Lab_02_cost_estimatoin.ipynb
bplustree/: pyproject.toml
bplustree/bplustree/: __init__.py  bplustree.py  bplustree_usage_example.py
