[tool.poetry]
name = "bplustree"
version = "0.1.0"
description = "A Python library for B+ Tree data structure."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/yourusername/bplustree"
repository = "https://github.com/yourusername/bplustree"
keywords = ["b+tree", "data structure", "python"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
